--- a/LSTM_model.ipynb
+++ b/LSTM_model.ipynb
@@ -337,8 +337,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_train = pd.DataFrame(data.Close[0:int(len(data)*0.80)])\n",
-    "data_test = pd.DataFrame(data.Close[int(len(data)*0.80):len(data)]) "
+    "data_train = pd.DataFrame(data.Close[0:int(len(data)*0.80)]) #80%\n",
+    "data_test = pd.DataFrame(data.Close[int(len(data)*0.80):len(data)]) #20%"
    ]
   },
   {
